force-app/main/default/objects/CaseTransferSummaryReview__c/CaseTransferSummaryReview__c.object-meta.xml
<CustomObject>
    <label>Case Transfer Summary Review</label>
    <pluralLabel>Case Transfer Summary Reviews</pluralLabel>
    <nameField>
        <label>Review Name</label>
        <type>AutoNumber</type>
        <displayFormat>REV-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Captures agent feedback when they review an AI-generated case transfer summary.</description>
</CustomObject>