force-app/main/default/objects/CaseTransferSummaryReview__c/fields/Agent_Comments__c.field-meta.xml
<CustomField>
    <fullName>Agent_Comments__c</fullName>
    <label>Agent Comments</label>
    <description>Stores additional free-text comments by the agent about the AI-generated transfer summary.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>