force-app/main/default/objects/CaseTransferSummaryReview__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Summary Reviews</relationshipLabel>
    <relationshipName>Summary_Reviews</relationshipName>
    <required>true</required>
</CustomField>