force-app/main/default/objects/CaseTransferSummaryReview__c/fields/CaseTransferSummary__c.field-meta.xml
<CustomField>
    <fullName>CaseTransferSummary__c</fullName>
    <label>Case Transfer Summary</label>
    <description>Reference field linking this review record to the associated CaseTransferSummary that was reviewed.</description>
    <type>Lookup</type>
    <referenceTo>CaseTransferSummary__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>