force-app/main/default/objects/CaseTransferSummaryReview__c/fields/Missing_Context__c.field-meta.xml
<!-- Project: AI-Powered Case Transfer Summary | LLD-AIPoweredCaseTransferSummary -->
<CustomField>
    <fullName>Missing_Context__c</fullName>
    <label>Missing Context</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Any context the agent identified as missing from the AI-generated summary.</description>
</CustomField>