force-app/main/default/objects/CaseTransferSummaryReview__c/fields/Next_Action_Selected__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Selected__c</fullName>
    <label>Next Action Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact customer</fullName>
            </value>
            <value>
                <fullName>Investigate internally</fullName>
            </value>
            <value>
                <fullName>Escalate further</fullName>
            </value>
            <value>
                <fullName>Resolve case</fullName>
            </value>
            <value>
                <fullName>Request more information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>