force-app/main/default/objects/CaseTransferSummaryReview__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <label>Reviewed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Case Summary Reviews</relationshipLabel>
    <relationshipName>Case_Summary_Reviews</relationshipName>
    <required>true</required>
</CustomField>