force-app/main/default/objects/CaseTransferSummaryReview__c/fields/Reviewed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_DateTime__c</fullName>
    <label>Reviewed Date Time</label>
    <description>Stores the date and time when the case transfer summary was reviewed by the agent.</description>
    <type>DateTime</type>
</CustomField>