force-app/main/default/objects/CaseTransferSummaryReview__c/fields/Summary_Quality_Rating__c.field-meta.xml
<CustomField>
    <fullName>Summary_Quality_Rating__c</fullName>
    <label>Summary Quality Rating</label>
    <description>Numeric rating (1 to 5) capturing the quality of the AI-generated transfer summary as assessed by the agent.</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>