force-app/main/default/objects/CaseTransferSummaryReview__c/fields/Was_Summary_Useful__c.field-meta.xml
<CustomField>
    <fullName>Was_Summary_Useful__c</fullName>
    <label>Was Summary Useful</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>